charts/paperless-ngx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: paperless
    app.kubernetes.io/name: paperless
  name: paperless
  namespace: paperless
spec:
  selector:
    matchLabels:
      service: paperless
      app.kubernetes.io/name: paperless
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: paperless
        app.kubernetes.io/name: paperless
    spec:
      containers:
        - image: ghcr.io/paperless-ngx/paperless-ngx
          name: paperless
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "2048Mi"
            limits:
              memory: "8192Mi"
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: paperless-claim0
              subPath: data
            - mountPath: /usr/src/paperless/media
              name: paperless-host
              subPath: paperless/media
            - mountPath: /usr/src/paperless/export
              name: paperless-host
              subPath: paperless/export
            - mountPath: /usr/src/paperless/consume
              name: paperless-host
              subPath: paperless/consume
      restartPolicy: Always
      volumes:
        - name: paperless-claim0
          persistentVolumeClaim:
            claimName: paperless-claim0
        - name: paperless-host
          hostPath:
            path: /mnt/media
