charts/paperless-ngx/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: paperless
  name: paperless
  namespace: paperless
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    service: paperless
