charts/paperless-ngx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: paperless-ngx.png
    gethomepage.dev/name: Paperless
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - paperless.int.imdevinc.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keda-add-ons-http-interceptor-proxy
      namespace: keda
      port: 8080
